# CG-20-21

./: README.md
Fase1/Engine/: Cena.h  main.cpp
Fase1/Gerador/: CMakeLists.txt  main.cpp
Fase2/: Relatorio_CG_Grupo5.docx
Fase2/Engine/: CMakeLists.txt  Cena.h  Grupo.h  Modelo.h  main.cpp
Fase2/Engine/Modelos/: Jupiter.xml  Marte.xml  Neptuno.xml  Terra.xml  Urano.xml  planetas.xml  saturno.xml
Fase2/Engine/Modelos/Modelos_3D/: anelSaturno.3d  arco.cpp  cone_2_5_20_20.3d  esfera_2_40_40.3d  plano_2_2.3d
Fase2/Engine/tinyxml2-8.0.0/: CMakeLists.txt
Fase3/Engine/: CMakeLists.txt  Cena.h  Cor.h  Grupo.h  main.cpp
Fase3/Engine/Modelos/: planetas.xml
Fase3/Engine/Modelos/Modelos_3D/: arco.3d  box_2_2_10_particoes=3.3d  esfera_2_20_20.3d  teapot.3d
Fase3/Gerador/: main.cpp  makefile
Fase4/Engine/: CMakeLists.txt  Cena.h  Cor.h  Grupo.h  Modelo.h  Ponto.h  Triangulo.h  main.cpp
Fase4/Engine/Modelos/: Bezier.xml  Box.xml  Cone.xml  Plane.xml  planetas.xml
Fase4/Engine/Modelos/Modelos_3D/: arco.3d  box.3d  boxInversa.3d  cone.3d  esfera.3d  plane.3d  teapot.3d
Fase4/Gerador/: boxInversaCode.txt  main.cpp
